Tue Sep 21 11:34:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Base/Client_init.h:
        * ciao/Base/Client_init.cpp:
          Removed not used methods and includes

Tue Sep 21 11:26:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Base/Server_init.h:
        * ciao/Base/Server_init.cpp:
          Removed write_ior function, not used

        * ciao/Containers/Session/Session_Container.h:
          Layout changes

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Use different write_ior method

Tue Sep 21 10:22:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Contexts/Extension/ExtensionContext_T.h:
        * ciao/Contexts/Extension/ExtensionContext_T.cpp:
        * ciao/Contexts/Extension/ExtensionContext.h:
        * ciao/Contexts/Extension/ExtensionContext.cpp:
          Renamed to _T and converted to a C++ template

Tue Sep 21 07:06:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Contexts/Context_Impl_Base.h:
        * ciao/Contexts/Context_Impl_Base.cpp:
        * ciao/Contexts/Session/Context_Impl_T.h:
        * ciao/Contexts/Session/Context_Impl_T.cpp:
        * ciao/Servants/Session/Servant_Impl_T.cpp:
          For the moment readded the instance id as ciao specific method, but
          this will go away at some moment again, resolve_service_reference
          is a much better way to get access to some new idl interface that
          delivers more meta data to a component

        * performance-tests/Protocols/Receiver/Receiver_exec.h:
        * performance-tests/Protocols/Receiver/Receiver_exec.cpp:
        * performance-tests/Protocols/Sender/Sender_exec.h:
        * performance-tests/Protocols/Sender/Sender_exec.cpp:
          Updated because of the removed ciao specific context

Mon Sep 20 15:28:39 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.mpc: